fix logo is extending outside the top bar on IE7

--- a/app/assets/stylesheets/layout-fullscreen.css
+++ b/app/assets/stylesheets/layout-fullscreen.css
@@ -8,7 +8,7 @@ html, body, #wrapper {
   position: relative;
 }
 #header {
-  height: 5em;
+  height: 80px;
   padding: 0 1em;
   position: absolute;
   top: 0;
@@ -31,7 +31,7 @@ html, body, #wrapper {
 }
 #content {
   position: absolute;
-  top: 5em;
+  top: 80px;
   right: 0;
   left: 0;
   bottom: 0;
